--- a/src/styles/components/pagenavbar.scss
+++ b/src/styles/components/pagenavbar.scss
@@ -1,5 +1,8 @@
 header {
   a.nav-link {
-    color: rgba(255,255,255,1);
+    color: rgba(0, 0, 0, 0.8);
+  }
+  nav {
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
