--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,3 +2,27 @@
 //   text-decoration: none;
 // }
 
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;700;900&display=swap');
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgba(183,1,52, 1);
+}
+
+a:active {
+  color: rgba(0,0,0, 1);
+}
+
+body {
+  font-family: 'Archivo', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Archivo', sans-serif;
+}
+
