--- a/src/styles/components/artshow.scss
+++ b/src/styles/components/artshow.scss
@@ -4,6 +4,7 @@
   margin-right: 10px;
   font-weight: bold;
   color: rgba(0,0,0, 0.6);
+  font-family: 'Chivo', sans-serif;
 }
 
 .desc {
@@ -11,11 +12,12 @@
 }
 
 .desc-bio {
-  margin-top: 30px;
+  margin: 20px 0px 0px 30px;
   border: 1px dotted rgba(0,0,0, 0.1);
   padding: 5px;
 }
 
-.bio-boxes {
-  
+hr {
+  border: 0.5px dotted rgba(0,0,0, 0.1);
+  background-color: rgba(0,0,0, 0.1);
 }
